# metakit

examples/: aside.py  case.py  demo.py  derived.py  example.ipynb  find.py  millions.py  mkmemoio.py  pair.py  remap.py  selfref.py  wrap.py
html/: annotated.html  borc_8h-source.html  borc_8h.html  classc4___bytes-members.html  classc4___bytes.html  classc4___bytes_prop-members.html  classc4___bytes_prop.html  classc4___bytes_prop__inherit__graph.md5  classc4___bytes_ref-members.html  classc4___bytes_ref.html  classc4___bytes_ref__inherit__graph.md5  classc4___cursor-members.html  classc4___cursor.html  classc4___custom_viewer-members.html  classc4___custom_viewer.html  classc4___double_prop-members.html  classc4___double_prop.html  classc4___double_prop__inherit__graph.map  classc4___double_prop__inherit__graph.md5  classc4___double_ref-members.html  classc4___double_ref.html  classc4___double_ref__inherit__graph.md5  classc4___file_strategy-members.html  classc4___file_strategy.html  classc4___file_strategy__inherit__graph.map  classc4___file_strategy__inherit__graph.md5  classc4___file_stream-members.html  classc4___file_stream.html  classc4___file_stream__inherit__graph.map  classc4___file_stream__inherit__graph.md5  classc4___float_prop-members.html  classc4___float_prop.html  classc4___int_prop.html  (+280 more)
python/: .gitignore  PyProperty.cpp  PyRowRef.cpp  PyStorage.cpp  PyView.cpp  metakit.py  pyproject.toml  setup.cfg  setup.py
python/scxx/: PWOBase.h  PWONumber.h  PWOSequence.h
python/test/: mktestsupport.py  test_inttypes.py  test_stringtype.py  test_unittest.py
(+40 files in other folders)
