[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metakit"
version = "2.4.9.7"
authors = [{name = "Gordon McMillan / Jean-Claude Wippler", email = "jcw@equi4.com"}]
maintainers = [
	{name = "Jean-Claude Wippler", email = "jcw@equi4.com"},
	{name = "KOLANICH"}
]
license = {text = "X/MIT style, see: https://www.equi4.com/mklicense.html"}
description = "Python bindings to the Metakit database library"
keywords = ["database"]

[project.urls]
Homepage = "https://www.equi4.com/metakit/python.html"
"Source Code" = "https://github.com/prebuilder/metakit"

[tool.setuptools]
py-modules = ["metakit"]
include-package-data = false

