[metadata]
name = metakit
version = 2.4.9.7
author = Gordon McMillan / Jean-Claude Wippler
author_email = jcw@equi4.com
maintainer = Jean-Claude Wippler
maintainer_email = jcw@equi4.com
license = X/MIT style, see: https://www.equi4.com/mklicense.html
description = Python bindings to the Metakit database library
keywords = database
url = https://www.equi4.com/metakit/python.html

[options]
py_modules = metakit
setup_requires = setuptools>=42; wheel
#; setuptools_scm[toml]>=3.4
